RESOLVED FIXED131706
PDFPlugin style fixes
https://bugs.webkit.org/show_bug.cgi?id=131706
Summary PDFPlugin style fixes
Tim Horton
Reported 2014-04-15 15:07:33 PDT
While working on getting the style checker to check Objective-C source files, I ran through all of the errors in PDFPlugin.mm and fixed the ones that were broken in the style-checker there, and the ones that were broken in PDFPlugin here. No reason to throw away good style fixes, so let's land them.
Attachments
patch (12.65 KB, patch)
2014-04-15 15:08 PDT, Tim Horton
darin: review+
Tim Horton
Comment 1 2014-04-15 15:08:39 PDT
WebKit Commit Bot
Comment 2 2014-04-15 15:10:41 PDT
Attachment 229407 [details] did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2014-04-16 10:56:01 PDT
Note You need to log in before you can comment on or make changes to this bug.