Fix some style checker complaints in PDFPlugin https://bugs.webkit.org/show_bug.cgi?id=131706

Reviewed by Darin Adler.

* WebProcess/Plugins/PDF/PDFPlugin.mm:
(-[WKPDFPluginAccessibilityObject accessibilityAttributeValue:]):
(-[WKPDFPluginAccessibilityObject accessibilityAttributeValue:forParameter:]):
(-[WKPDFPluginAccessibilityObject accessibilityAttributeNames]):
(WebKit::PDFPlugin::attemptToUnlockPDF):
(WebKit::PDFPlugin::updatePageAndDeviceScaleFactors):
(WebKit::PDFPlugin::isEditingCommandEnabled):
(WebKit::PDFPlugin::nextMatchForString):
(WebKit::PDFPlugin::handleWheelEvent):
(WebKit::PDFPlugin::liveData):


Canonical link: https://commits.webkit.org/149791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167357 268f45cc-cd09-0410-ab3c-d52691b4dbfc